--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>Assignment 2</title>
 </head>
 <body>
+    <h1>LINKS FOR MEDIA AND TABLE HTML ASSIGNMENTS {ASSIGNMENT 2}</h1>
     <nav>
         <a href="Assignment 2/media.html">Media Assignment</a>
         <a href="Assignment 2/table.html">Table Assignment</a>
